--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
     <!-- <script src="./index.js"></script> -->
     <!-- <script src="../dist/main.js"></script> -->
     <!-- <script src="../dist/bundle.js"></script> -->
+    <!-- 从根目录下引入 -->
+    <!-- <script src="/bundle.js"></script> -->
   </head>
   <body>
     <ul>
